--- a/000000/222222.html
+++ b/000000/222222.html
@@ -1,1 +1,63 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8" />
+  <title>QR Codes - Four Seasons Kalaa</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
+      background-color: #f9f9f9;
+      text-align: center;
+    }
+    .qr-container {
+      display: flex;
+      justify-content: center;
+      gap: 40px;
+      flex-wrap: wrap;
+      margin-top: 30px;
+    }
+    .qr-item {
+      background: white;
+      padding: 15px;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      width: 180px;
+    }
+    .qr-item h3 {
+      margin-bottom: 15px;
+      font-weight: normal;
+      color: #333;
+    }
+    .qr-item img {
+      width: 150px;
+      height: 150px;
+    }
+  </style>
+</head>
+<body>
 
+<h1>QR Codes pour accéder aux pages du site</h1>
+    
+<div class="qr-container">
+  <div class="qr-item">
+    <h3>Accueil</h3>
+    <img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=http://tonsite.com/accueil.html" alt="QR Code Accueil" />
+  </div>
+  <div class="qr-item">
+    <h3>Galerie</h3>
+    <img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=http://tonsite.com/galerie.html" alt="QR Code Galerie" />
+  </div>
+  <div class="qr-item">
+    <h3>Contact</h3>
+    <img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=http://tonsite.com/contact.html" alt="QR Code Contact" />
+  </div>
+  <div class="qr-item">
+    <h3>Réservation</h3>
+    <img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=http://tonsite.com/reservation.html" alt="QR Code Réservation" />
+  </div>
+</div>
+
+</body>
+</html>
